# dry-api

./: .gitignore  README.md  build.gradle  dryapi-workspace.code-workspace  settings.gradle
clearance-validator/: .npmrc  .prettierrc.json  package.json
clearance-validator/src/: ClearanceValidator.mjs
dry-api-core/: build.gradle
dry-api-core/src/main/java/com/navigo3/dryapi/impl/: GetMethodMetadataImpl.java  GetSystemMetadataImpl.java  ListMethodsImpl.java
dry-api-interface/: .gitignore  build.gradle
dry-api-java-client/: build.gradle
dry-api-js-client/: package.json
dry-api-js-client-test/: package.json
dry-api-js-client-test/src/: test.js  test.mjs
dry-api-js-client/src/: ApiConnector.js  ApiConnector.mjs  DryAPI.js
dry-api-python-client/: CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
dry-api-python-client/dry_api_python_client/: ApiBatch.py  ApiConnector.py  ApiConnectorWrapper.py  Utils.py  ValidationErrorHandler.py  Validator.py  env.json  main.py
dry-api-python-client/src/dry_api_python_client/: dry_api_python_client.py
dry-api-python-client/tests/: TestSimple.py
dry-api-sample-defs/: build.gradle
dry-api-sample-impls/: build.gradle
dry-api-servlet/: .gitignore  build.gradle
dry-api-standalone-server/: build.gradle
dry-api-tests/: .gitignore  build.gradle
dry-api-tests/src/test/resources/: log4j2.xml
dry-api-tests/src/test/resources/TypeSchema/: colls.txt  complexData.txt  complexTyped.txt  dataWithJson.txt  derivedGeneric.txt  directContainer.txt  nestedColls.txt  plain.txt  recursive.txt  simpleTyped.txt
(+141 files in other folders)
