[tool.poetry]
name = "dry_api_python_client"
version = "0.0.1"
description = "Python client for DryAPI apps"
authors = ["Navigo Solutions s.r.o."]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
